<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_spacing"
    android:layout_marginTop="@dimen/standard_spacing"
    android:paddingLeft="@dimen/large_spacing"
    android:paddingRight="@dimen/large_spacing">

    <ImageView
        android:id="@+id/userPictureThumbnail"
        android:layout_width="@dimen/user_picture_thumbnail"
        android:layout_height="@dimen/user_picture_thumbnail"
        android:contentDescription="@string/user_picture_desc"
        android:background="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/userFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:text="@string/user_full_name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userPictureThumbnail"/>

    <TextView
        android:id="@+id/userAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:text="@string/user_city_state"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@+id/userPictureThumbnail"
        app:layout_constraintTop_toBottomOf="@id/userFullName"/>

    <TextView
        android:id="@+id/userMobilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:text="@string/user_mobile_phone"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@+id/userPictureThumbnail"
        app:layout_constraintTop_toBottomOf="@id/userAddress"/>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:text="@string/user_email"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@+id/userPictureThumbnail"
        app:layout_constraintTop_toBottomOf="@id/userMobilePhone"/>

    <ImageView
        android:id="@+id/favoriteIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>